--- a/NavyAccountWeb/NavyAccountWeb.csproj
+++ b/NavyAccountWeb/NavyAccountWeb.csproj
@@ -87,9 +87,7 @@
   </ItemGroup>
 
   <ProjectExtensions>
-    <VisualStudio>
-      <UserProperties appsettings_1development_1json__JsonSchema="lo" />
-    </VisualStudio>
+    <VisualStudio><UserProperties /></VisualStudio>
   </ProjectExtensions>
 
 </Project>
