--- a/NavyAccountWeb/appsettings.json
+++ b/NavyAccountWeb/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
     //"DefaultConnection": "Server =KAYNET\\SQLSERVER2019; Database = NavyAccount; integrated security=True; "
-    "DefaultConnection": "Server =HICADSERVER\\SQLSERVER2019; Database = NavyAccount; integrated security=True; "
+    //"DefaultConnection": "Server =HICADSERVER\\SQLSERVER2019; Database = NavyAccount; integrated security=True; ",
+    "DefaultConnection": "Server =JUDESCO\\JUDESCO; Database = NavyAccount; integrated security=True; User Id=sa; Password=jesusislord; "
 
   },
   "ServerSettings": {
@@ -13,7 +14,7 @@
     "SizeOfData": 10000,
     "BatchSize": 1000,
     "ServerId": "S0D-",
-    "DbConnectionTimeout": 3600
+    "DbConnectionTimeout": 36000
   },
   "Logging": {
     "LogLevel": {
