add dapper,printpaymentproposal service

--- a/NavyAccountWeb/appsettings.json
+++ b/NavyAccountWeb/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server =KAYNET\\SQLSERVER2019; Database = NavyAccount; integrated security=True; "
+    "DefaultConnection": "Data Source=DESKTOP-TMD2J78\\SQLEXPRESS;Initial Catalog=NavyAccount;Integrated Security=True"
     //"DefaultConnection": "Server =HICADSERVER\\SQLSERVER2019; Database = NavyAccount; integrated security=True; ",
-   // "DefaultConnection": "Server =JUDESCO\\JUDESCO; Database = NavyAccount; integrated security=True; User Id=sa; Password=jesusislord; "
+    // "DefaultConnection": "Server =JUDESCO\\JUDESCO; Database = NavyAccount; integrated security=True; User Id=sa; Password=jesusislord; "
 
   },
   "ServerSettings": {
