--- a/NavyAccountWeb/appsettings.json
+++ b/NavyAccountWeb/appsettings.json
@@ -2,7 +2,7 @@
   "ConnectionStrings": {
    // "DefaultConnection": "Data Source=DESKTOP-TMD2J78\\SQLEXPRESS;Initial Catalog=NavyAccount;Integrated Security=True"
     //"DefaultConnection": "Server =HICADSERVER\\SQLSERVER2019; Database = NavyAccount; integrated security=True; ",
-    "DefaultConnection": "Server=KAYNET\\SQLSERVER2019; Database = NavyAccount; integrated security=True; User Id=sa; Password=passme;"
+    "DefaultConnection": "Server=HICAD-PC\\SQLSERVER2019; Database = NavyAccount; integrated security=True; User Id=sa; Password=passme;"
 
   },
   "ServerSettings": {
