--- a/NavyAccountWeb/appsettings.json
+++ b/NavyAccountWeb/appsettings.json
@@ -1,8 +1,10 @@
 {
   "ConnectionStrings": {
-   // "DefaultConnection": "Data Source=DESKTOP-TMD2J78\\SQLEXPRESS;Initial Catalog=NavyAccount;Integrated Security=True"
+    // "DefaultConnection": "Data Source=DESKTOP-TMD2J78\\SQLEXPRESS;Initial Catalog=NavyAccount;Integrated Security=True"
     //"DefaultConnection": "Server =HICADSERVER\\SQLSERVER2019; Database = NavyAccount; integrated security=True; ",
-    "DefaultConnection": "Server=HICAD-PC\\SQLSERVER2019; Database = NavyAccount; integrated security=True; User Id=sa; Password=passme;"
+    //"DefaultConnection": "Server=DESKTOP-C3FGCR6\\SQLSERVER2919; Database = NavyAccount; integrated security=True; User Id=sa; Password=H1cadServer;",
+    //"DefaultConnection": "Server=HICAD-TOM\\SQLSERVER2919; Database = NavyAccount; integrated security=True; User Id=sa; Password=H1cadServer;",
+    "DefaultConnection": "Server=HICAD-TOM\\SQLEXPRESS;Database=NavyAccount;Trusted_Connection=True;MultipleActiveResultSets=true"
 
   },
   "ServerSettings": {
