--- a/NavyAccountWeb/package.json
+++ b/NavyAccountWeb/package.json
@@ -16,14 +16,16 @@
     "devDependencies": {
         "axios": "^0.25.0",
         "cross-env": "^5.2.0",
-        "laravel-mix": "^4.0.15",
+        "laravel-mix": "^4.1.4",
         "moment": "2.24.0",
         "v-autosuggest": "1.0.3",
         "vue": "^2.6.10",
         "vue-template-compiler": "^2.6.10",
         "vuejs-auto-complete": "^0.9.0",
         "vuejs-datepicker": "1.6.2",
-        "vuex": "^3.1.2"
+        "vuex": "^3.1.2",
+        "webpack": "^5.97.1",
+        "webpack-cli": "^6.0.1"
     },
     "dependencies": {
         "vuejs-paginate": "^2.1.0"
